Change requirements dashboard overlay to scroll on overflow and fix some bugs

--- a/src/main/resources/css/condec.dashboard.css
+++ b/src/main/resources/css/condec.dashboard.css
@@ -1,96 +1,113 @@
 .condec-dashboard-select .condecNoGit {
     background: yellow;
 }
+
 .condec-dashboard-selection-section {
-    margin:0 1em;
-    text-align:center;
+    margin: 0 1em;
+    text-align: center;
 }
+
 .condec-dashboard-contents {
-    border:2px dashed blue;
-    border-radius:1em;
-    margin:1em;
-    padding:1em;
+    border: 2px dashed blue;
+    border-radius: 1em;
+    margin: 1em;
+    padding: 1em;
 }
+
 .condec-dashboard-contents.init {
-    height:400px;
-    min-height:400px;
+    height: 400px;
+    min-height: 400px;
 }
+
 .condec-dashboard-contents.waiting {
-    border-color:orange;
+    border-color: orange;
 }
+
 .condec-dashboard-contents.processing {
-    border:1px solid grey;
+    border: 1px solid grey;
 }
+
 .condec-dashboard-contents.results {
-    border:1px solid grey;
+    border: 1px solid grey;
 }
+
 .notsetyet {
-	border:2px solid red;
+    border: 2px solid red;
 }
+
 #decKnowElementsOverlay {
-	position:fixed;
-	z-index:1;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-	background: #00000033;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #00000033;
 
-	cursor:pointer;
+    cursor: pointer;
 }
+
 #decKnowElementsOverlay .box {
-	position:fixed;
-	width:800px;
-	height:320px;
-	top:calc(50% - 160px);
-	left:calc(50% - 400px);
+    position: fixed;
+    overflow-y: scroll;
+    width: 800px;
+    height: 800px;
+    top: calc(20% - 160px);
+    left: calc(50% - 400px);
 
-	background: white;
-	border-radius: 1rem;
-	border: 0.5rem solid #2f4554;
-	padding:1rem;
+    background: white;
+    border-radius: 1rem;
+    border: 0.5rem solid #2f4554;
+    padding: 1rem;
 
-	cursor:initial;
+    cursor: initial;
 }
+
 #extractedDecKnowElements {
-	margin: 1rem 0.5rem;
-	font-size: 1.0rem;
+    margin: 1rem 0.5rem;
+    font-size: 1.0rem;
 }
+
 #extractedDecKnowElements p:hover {
-	color: blue;
-	border-color:blue;
+    color: blue;
+    border-color: blue;
 }
-#extractedDecKnowElements p{
-	margin: 0.1rem 0.4rem;
-	cursor:pointer;
-	display: inline-block;
-	border: 1px solid #2f4554;
+
+#extractedDecKnowElements p {
+    margin: 0.1rem 0.4rem;
+    cursor: pointer;
+    display: inline-block;
+    border: 1px solid #2f4554;
 }
+
 .condec-req-dashboard-no-project {
-    border:2px dashed blue;
-    border-radius:1em;
-    margin:1em;
-    padding:1em;
-    height:400px;
-    min-height:400px;
+    border: 2px dashed blue;
+    border-radius: 1em;
+    margin: 1em;
+    padding: 1em;
+    height: 400px;
+    min-height: 400px;
 }
+
 .dynamic-content {
     border: 1px solid grey;
-    border-radius:1em;
-    margin:1em;
-    padding:1em;
+    border-radius: 1em;
+    margin: 1em;
+    padding: 1em;
 }
-.configproject{
-	border: 1px solid grey;
-	border-radius:1em;
-	margin:1em;
-    padding:1em;
-	text-align:center;
+
+.configproject {
+    border: 1px solid grey;
+    border-radius: 1em;
+    margin: 1em;
+    padding: 1em;
+    text-align: center;
 }
-.configissuetype{
-	border: 1px solid grey;
-	border-radius:1em;
-	margin:1em;
-    padding:1em;
-	text-align:center;
+
+.configissuetype {
+    border: 1px solid grey;
+    border-radius: 1em;
+    margin: 1em;
+    padding: 1em;
+    text-align: center;
 }
